# WarpXSwap

./: Anchor.toml  README.md  WarpXSwap_Whitepaper.docx  package-lock.json  package.json  tsconfig.json
Simulations/: README.md
Simulations /: README.MD
WhitePaper/: WarpXSwap_Whitepaper.md
crank/: README.md  package.json
crank/src/: config.ts  index.ts  logger.ts  loop.ts
crank/src/steps/: calculateAndPushFee.ts  pushOraclePrice.ts  pushVolume.ts  runThresholdCheck.ts  updatePoolMetrics.ts  updatePythFeeds.ts
programs /governance/src/: constants.rs  lib.rs  state.rs  tests.rs
programs /routing/: Cargo.toml
programs/governance/: Cargo.toml
programs/governance/src/: constants.rs  errors.rs  lib.rs  state.rs  tests.rs
programs/governance/src/instructions/: execute.rs  finalize.rs  initialize.rs  mod.rs  proposal.rs  vote.rs
programs/info_pool/: Cargo.toml
programs/info_pool/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/info_pool/src/instructions/: fee.rs  governance.rs  initialize.rs  mod.rs  pyth.rs  read.rs  threshold.rs
programs/pool/: Cargo.toml
programs/pool/src/: constants.rs  errors.rs  lib.rs  state.rs  tests.rs  utils.rs
programs/pool/src/instructions/: add_asset.rs  allowance.rs  deposit_withdraw.rs  governance_cpi.rs  info_pool_cpi.rs  initialize_pool.rs  read.rs  swap.rs
scripts/: complete-setup.ts  crank.ts  deploy.ts  devnet-setup.ts  govern-crank.ts  propose-pyth-feed.ts  setup-pool.ts  test-validate-payload.ts  update-program-ids.ts  verify-deploy.ts
scripts /: ci-check-replace-after-deploy.sh
sdk/: USAGE.md  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  idl-loader.ts  index.ts  info-pool-client.ts  infoPool.ts  pda.ts  pdas.ts  pool-client.ts  pool-setup.ts  pool.ts  routing-client.ts  sync-idl.ts  types.ts
tests/: README.md  package.json  pool-deposit-withdraw.test.ts  pool-fee-accumulator.test.ts  pool-oracle-staleness.test.ts  pool-swap.test.ts  pool-usd-fee-claim.test.ts  pool-weight.test.ts  tsconfig.json
tests/helpers/: mint.ts  setup.ts
(+46 files in other folders)
