[package]
name = "pool-program"
version = "0.1.0"
description = "WarpXSwap Pool Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = "0.30.1"

# Pin transitive deps to versions compatible with platform-tools Rust 1.75.0
indexmap  = { workspace = true }
ahash     = { workspace = true }
hashbrown = { workspace = true }
